# dex-funding-spread

./: .env.example  .gitignore  Dex Strategy Onepager.docx  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/quick/1-dex-llm/: 1-PLAN.md  1-SUMMARY.md
configs/: app.example.toml
docs/: architecture.md
examples/: sample_frame.json
prompts/: entry_router_ko.md  playbook_router.md  position_router_ko.md
src/dex_llm/: __init__.py  bot.py  cli.py  config.py  live_frame.py  market.py  models.py
src/dex_llm/analytics/: __init__.py  report.py
src/dex_llm/collector/: __init__.py  storage.py
src/dex_llm/executor/: __init__.py  live.py  nonces.py  paper.py  safety.py
src/dex_llm/features/: extractor.py
src/dex_llm/integrations/: __init__.py  coinglass.py  hyperliquid.py  hyperliquid_live.py
src/dex_llm/llm/: __init__.py  openai_router.py  prompting.py  router.py
src/dex_llm/replay/: __init__.py  session.py
src/dex_llm/risk/: kill_switch.py  policy.py
tests/: test_bot.py  test_cli.py  test_coinglass_integration.py  test_features.py  test_hyperliquid_integration.py  test_hyperliquid_live.py  test_live_executor.py  test_live_frame.py  test_openai_router.py  test_paper.py  test_prompting.py  test_risk.py  test_router.py  test_storage.py
