[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "dex-llm"
version = "0.1.0"
description = "Single-DEX liquidation-map playbook router with replay-first Python tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.2.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "rich>=13.9.0",
  "typer>=0.15.0",
  "websockets>=15.0",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[project.scripts]
dex-llm = "dex_llm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dex_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
